@@ -1,8 +1,5 @@
 ffmpegfs TODOs
 
-* Fix deprecation: av_iformat_next/av_oformat_next() lack a replacement (currently
-    still used in tools/probetest.c "static void probe" in 58.10.100)
-
 * Add intelligent stream copy, e.g., if transcoding a transport stream
   that already represents a H264 video stream it would be possible to
   simply repackage it to a mp4 container without recoding.
