@@ -6,7 +6,8 @@ Important changes in 1.4 (2018-05-XX)
 
 * Bugfix: 
 
-* Fix deprecation: 
+* Fix deprecation: 2018-xx-xx - xxxxxxx - lavf 58.9.100 - avformat.h
+    Deprecate use of  av_iformat_next(), av_oformat_next().
 
 Important changes in 1.3 (2018-05-04)
 
